@@ -1,3 +1,7 @@
+2015-09-25  Stipe Tolj  <stolj at kannel.org>
+    * utils/mtbatch.c: add option -x to disallow injection of smsbox-id to MT
+      messages, in order to let normal smsbox connection handle DLRs.
+      
 2015-08-04 Alexander Malysh <amalysh at kannel.org>
     * gwlib/conn.c: added support for chained certificates.
 
